2008-09-01 Roman
- FIX:/UI/VCAEngine: Dynamic link to closed pages is fixed. If linked attribute have link to parameter then it use.
- FIX:/UI/Vision,/UI/WebVision: NAN real values' crash into primitive Diagram is fixed.
- FIX:/DAQ/ModBus: ModBus/TCP timeout changed to 2 seconds.
- FIX:/Transport/Sockets: Fix exeption from timeout expired.
- FIX:/UI/Vision: Set new runtime window title is fixed.
- FIX:/UI/Vision: Close included pages is fixed.
- FIX:/UI/WebVision: Close and open commands is fixed.
- !:/UI/WebVision: Focus support to primitive "Diagram" is added.
- !:/UI/WebVision: Keyboard events process added.


2008-08-30 Roman
- FIX:/Protocol: Input protocol's modify status present is fixed.
- FIX:/DAQ/DiamondBoards: No set some parameter's attributes is fixed.
- FIX:/UI/VCAEngine: Session's list mode is fixed. Deletion from QTCfg is work now.
- !:/UI/WebVision: The spin editable line for primitive FormEl make active.


2008-08-27 Maxim
- FIX:/UI/WebVision: Color allocation for figures with borders is fixed for primitive ElFigure.
- FIX:/UI/Vision: toolAct function is fixed.


2008-08-26 Maxim
- FIX:/UI/Vision: Building the inundation path for primitive ElFigure is fixed.
- FIX:/UI/Vision: Drawing the arc with the help of mouse for primitive ElFigure is fixed.
- FIX:/UI/Vision: Choosing the figure with the help of mouse for primitive ElFigure is fixed.
- !/UI/Vision: Scaling the lines and borders is added for primitive ElFigure.
- !/UI/WebVision: Scaling the lines and borders is added for primitive ElFigure.


2008-08-25 Roman
- FIX:/UI/VCAEngine: Translation to Russian and Ukranian is fixed.
- FIX:/UI/Vision: Runtime window maximize and fullscreen on start is fixed.
- /UI/WebVision: Title name changet to project's name.
- !!:/UI/WebVision: First realisation of active mode for view EditLine of primitive ElFigure.


2008-08-20 Roman
- !:/SYS/XML: Parse error part string is appended to error message.
- !:/Transport/Socket: 5 tries for restore connection is added.