@@ -351,6 +351,15 @@ TWEB::TWEB( string name ) : m_t_auth(10), chck_st(false)
 	"  return null;\n"
 	"}\n"
 	"/***************************************************\n"
+	" * realRound - Real numbers round                  *\n"
+	" ***************************************************/\n"
+	"function realRound( val, dig, toInt )\n"
+	"{\n"
+	"  rez = Math.floor(val*Math.pow(10,dig?dig:0)+0.5)/Math.pow(10,dig?dig:0);\n"
+	"  if( toInt ) return Math.floor(rez+0.5);\n"
+	"  return rez;\n"
+	"}\n"
+	"/***************************************************\n"
 	" * evKeyGet - Get key code from event              *\n"
 	" ***************************************************/\n"
 	"function evKeyGet( e )\n"
@@ -564,7 +573,7 @@ TWEB::TWEB( string name ) : m_t_auth(10), chck_st(false)
 	"    geomX -= parseInt(this.parent.attrs['geomMargin'])+parseInt(this.parent.attrs['bordWidth']);\n"
 	"    geomY -= parseInt(this.parent.attrs['geomMargin'])+parseInt(this.parent.attrs['bordWidth']);\n"
 	"  }\n"
-	"  elStyle+='position: absolute; left: '+geomX.toFixed(0)+'px; top: '+geomY.toFixed(0)+'px; ';\n"
+	"  elStyle+='position: absolute; left: '+realRound(geomX)+'px; top: '+realRound(geomY)+'px; ';\n"
 	"  var geomW = parseFloat(this.attrs['geomW'])-2*(elMargin+elBorder);\n"
 	"  var geomH = parseFloat(this.attrs['geomH'])-2*(elMargin+elBorder);\n"
 	//"  if( this == masterPage ) resizeTo(geomW,geomH);\n"
@@ -577,7 +586,7 @@ TWEB::TWEB( string name ) : m_t_auth(10), chck_st(false)
 	"  else elStyle += 'overflow: hidden; ';\n"
 	"  var xSc = this.xScale(true);\n"
 	"  var ySc = this.yScale(true);\n"
-	"  geomW = (geomW*xSc).toFixed(0); geomH = (geomH*ySc).toFixed(0);\n"
+	"  geomW = realRound(geomW*xSc); geomH = realRound(geomH*ySc);\n"
 	"  if( this.tp == 'ElFigure' )\n"
 	"  {\n"
 	"    if( this.attrs['backColor'] ) elStyle+='background-color: '+this.attrs['backColor']+'; ';\n"
